# church-backend

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 262c368ec8d7_group_images_by_year_and_month.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: contact.py  events.py  images.py  web.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  event.py  image.py
app/schemas/: event.py  image.py
app/services/: email_service.py  event_service.py  image_db_service.py  image_service.py  storage_service.py
docs/: API_REFERENCE.md
tests/: conftest.py
tests/unit/: test_main.py
